# egui-citizen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: book.yml
book/: book.toml
book/src/: introduction.md  pitfalls.md  reference.md
book/src/concepts/: citizen.md  dispatcher.md  messages.md  problem.md
book/src/patterns/: stored-vs-stateless.md
crates/egui_citizen/: Cargo.toml  README.md
crates/egui_citizen/src/: citizen.rs  dispatcher.rs  lib.rs  message.rs  state.rs
develop/: task_findings.md  task_plan.md  task_progress.md
docs/: getting-started.md
docs/drawings/: Basic_App.drawio  Basic_App_State.drawio
examples/citizen_dock/src/: main.rs
examples/citizen_fetch/: Cargo.toml
examples/citizen_fetch/src/: main.rs
examples/getting_started/src/: main.rs
examples/serial_plotter/: Cargo.toml
examples/serial_plotter/src/: main.rs
