[workspace]
members = [
    "crates/egui_citizen",
    "examples/citizen_dock",
    "examples/serial_plotter",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
# egui citizen crate
egui_citizen = { version = "0.1.0", path = "crates/egui_citizen" }

# egui and eframe
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false }
egui_dock = "0.18.0"
egui_plot = "0.34.0"

# reactive state (from egui_mobius ecosystem)
egui_mobius_reactive = "0.3.0-alpha.33"

# serial
serialport = "4.7"

# async
tokio = { version = "1.43", features = ["full"] }

# utilities
chrono = "0.4"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.9"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.dist]
inherits = "release"
lto = "thin"
