[workspace]
members = [
    "crates/egui_citizen",
    "examples/citizen_dock",
    "examples/citizen_fetch",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
egui_citizen = { version = "0.1.0", path = "crates/egui_citizen" }
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false }
egui_dock = "0.18.0"
egui_mobius_reactive = "0.3.0-alpha.33"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.dist]
inherits = "release"
lto = "thin"
