[package]
name    = "citizen_fetch"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
eframe = { workspace = true, features = ["default"] }
egui = { workspace = true }
egui_dock = { workspace = true }
egui_citizen = { workspace = true }
crossbeam-channel = "0.5"
ureq = "2.10"
